<resources>
    <string name="app_name">SmartLearning</string>


    <string name="open" />
    <string name="close" />


    <string name="favo">قائمة المفضلة</string>

    <string name="gramatik">القواعد</string>
    <string name="sub_item_1">A1 قواعد</string>
    <string name="sub_item_2">A2 قواعد</string>

    <string name="sub_item_3">قواعد B1</string>
    <string name="sub_item_4">B2 قواعد</string>

    <string name="sub_item_5">C1 قواعد</string>
    <string name="sub_item_6">A1</string>


    <!-- Text_to_speech MainActivity -->
    <!-- تحويل النص الى كلام -->
    <string name="asa">اكتب النص او الجملة بالالمانية</string>
    <string name="pitch">تغير الصوت</string>
    <string name="bbb">سرعة الصوت</string>
    <string name="start">اضغط هنا</string>
    <string name="tv1">في حال لا يعمل الصوت</string>
    <string name="tv2">افتح الضبط ⚙️ في جهازك ثم خيار تحويل النص الى حديث</string>
    <string name="tv3">خيار المحرك المفضل اختار(الخدمات الصوتيه من Google)</string>
    <string name="tv4">الخيار الثاني (اللغة) اختار اللغة الالمانية</string>

    <string name="texttospeech">اكتب أي شي ثم اضغط هنا..</string>


    <string name="words">الكلمات</string>
    <string name="word_test">اختبار الكلمات</string>
    <string name="audio_test">اختبار صوتي</string>


    <string name="text1">الكلمة</string>
    <string name="text2">نطقها</string>
    <string name="text3">معناها</string>

    <string name="sub_item_2son">سيتوفر قريباً</string>


    <string name="about">حول التطبيق</string>
    <string name="strats">تقيم التطبيق</string>
    <string name="share">مشاركة التطبيق</string>

    <string name="search">search</string>
    <string name="textviewtt">aaaaaaaaaaaaaaaaaaa</string>
    <string name="title">title\n</string>
    <string name="todo" />

    <string name="item_not_available">هذا العنصر غير متوفر..</string>


    <string name="Grammar">قواعد اللغة</string>
    <string name="Readingandlistening">القراءة والاستماع</string>


    <!-- notification -->
    <string name="notification_allowed">تم السماح بالإشعارات</string>
    <string name="notification_denied">لم يتم السماح بالإشعارات</string>

    <string name="sub_item_1_1">🔒 A1 المستوى</string>
    <string name="sub_item_1_2">✅ A1 المستوى</string>

    <string name="ad_alert_title">تنبيه</string>
    <string name="ad_alert_message">يجب مشاهدة الإعلان لفتح هذه الصفحة. هل تريد المتابعة؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="ad_failed_to_show">فشل عرض الإعلان</string>
    <string name="ad_not_ready">الإعلان غير جاهز بعد، برجاء المحاولة لاحقًا</string>


    <string name="letters">ألحروف</string>
    <string name="special_letters">الحروف الخاصة</string>
    <string name="compound_letters">ألحروف المركبة</string>


    <!-- A1 MainActivitis -->
    <string name="level_a1">المستوى الاول</string>
    <string name="level_a2">المستوى الثاني</string>
    <string name="level_a3">المستوى الثالث</string>
    <string name="level_a4">المستوى الرابع</string>
    <string name="level_a5">المستوى الخامس</string>

    <string name="letters_pronunciation">الحروف ونطقها</string>
    <string name="text_to_speech">تحويل النص الى كلام</string>
    <string name="personal_pronouns">الضمائر الشخصيه</string>

    <string name="introduction">التعارف</string>
    <string name="greetings">التحايا</string>
    <string name="numbers">الارقام</string>

    <string name="time">الاوقات</string>
    <string name="days">أيام الأسبوع</string>
    <string name="months">الاشهر</string>

    <string name="weather_seasons">الطقس وفصول السنه</string>
    <string name="family_friends">العائلة و الاصدقاء</string>
    <string name="coolors">الألوان</string>


    <string name="ad_label">إعلان</string>


    <!-- ResultActivity Texts -->
    <!-- نصوص شاشة نتيجةى الاختبارات -->
    <string name="score_text">نتيجة اختبارك %1$d من %2$d</string>
    <string name="quiz2">TextView</string>
    <string name="qqqq">النتيجة</string>
    <string name="qqqqqqq">image</string>
    <string name="qqqqqqqqqq">اختبر نفسك باستمرار ليساعدك بسرعة الحفظ</string>
    <string name="qqqqqqqqqqqq">العودة الى الصفحة الرئيسية</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="qq">السؤال</string>
    <string name="kkk">العودة الى الصفحة الرئيسية</string>
    <string name="ookkkkkk">اختبر نفسك دوماً وباستمرار</string>
    <string name="ookkkkkk2">حتى تستطيع حفظ المزيد من الكلمات</string>

    <!-- Test words -->
    <!-- كلمات الاختبار -->
    <string name="q2_qworld">ما معنى كلمة</string>
    <string name="audio_instruction">اضغط على زر تشغيل الصوت ثم اختر الإجابة</string>

    <!-- نصوص المفضلة -->
    <!-- Favorite Texts -->

    <string name="empty_favorites">قائمة الكلمات المفضلة فارغة</string>


    <string name="share_app_text">حَمِل الآن تطبيق تعليم اللغة الألمانية\nhttps://play.google.com/store/apps/details?id=%1$s</string>


    <!-- App_About -->
    <!-- حول التطبيق -->
    <string name="designabout">تم إعداد وتَصميم وبرمجة هذا التطبيق من قِبَل</string>
    <string name="progname">المُبرمج ضاري العنِزي</string>
    <string name="mesage">TODO</string>
    <string name="tocommunicate">للتَواصل حول قتراحاتَكم أو مٌلاحظاتكم</string>
    <string name="sharing">شاركِ التطبيق مع ألأصدقاء</string>
    <string name="star">TODO</string>
    <string name="evaluate">قيّم التطبيق</string>
    <string name="textview">الإصدار: </string>
    <!-- Test words -->
    <!-- كلمات الاختبار -->

    <string name="last_question">السؤال الأخير</string>
    <string name="submit_answer">تثبيت الجواب</string>
    <string name="select_answer_first">اختار الاجابة أولاً</string>
    <string name="wrong_answer">الجواب خطأ</string>
    <string name="correct_answer">الجواب صح</string>
    <string name="quiz_result">نتيجة الاختبار</string>
    <string name="next_question">السؤال الآخر</string>


    <!-- Fragment1a1 Deutsches Alphabet -->
    <!-- Fragment1a1 حروف الهجاء الألمانية -->
    <string name="german_alphabet">حروف الهجاء الألمانية</string>
    <string name="deutsches_alphabet">Deutsches Alphabet</string>

    <string name="a_example">A / a</string>
    <string name="a_word">Apfel\nتفاحة</string>

    <string name="b_example">B / b</string>
    <string name="b_word">Buch\nكتاب</string>

    <string name="c_example">C / c</string>
    <string name="c_word">Cafe\nمقهى</string>

    <string name="d_example">D / d</string>
    <string name="d_word">Dorf\nقرية</string>

    <string name="e_example">E / e</string>
    <string name="e_word">Essen\nطعام</string>

    <string name="f_example">F / f</string>
    <string name="f_word">Fisch\nسمكة</string>

    <string name="g_example">G / g</string>
    <string name="g_word">Garten\nحديقة</string>

    <string name="h_example">H / h</string>
    <string name="h_word">Haus\nمنزل</string>

    <string name="i_example">I / i</string>
    <string name="i_word">Insel\nجزيرة</string>

    <string name="j_example">J / j</string>
    <string name="j_word">Jahr\nسنة</string>

    <string name="k_example">K / k</string>
    <string name="k_word">Küche\nمطبخ</string>

    <string name="l_example">L / l</string>
    <string name="l_word">Leben\nحياة</string>

    <string name="m_example">M / m</string>
    <string name="m_word">Mutter\nأم</string>

    <string name="n_example">N / n</string>
    <string name="n_word">Nacht\nليل</string>

    <string name="o_example">O / o</string>
    <string name="o_word">Obst\nفاكهة</string>

    <string name="p_example">P / p</string>
    <string name="p_word">Pferd\nحصان</string>

    <string name="q_example">Q / q</string>
    <string name="q_word">Qualität\nجودة</string>

    <string name="r_example">R / r</string>
    <string name="r_word">Reise\nسفر</string>

    <string name="s_example">S / s</string>
    <string name="s_word">Sommer\nصيف</string>

    <string name="t_example">T / t</string>
    <string name="t_word">Tisch\nطاولة</string>

    <string name="u_example">U / u</string>
    <string name="u_word">Uhr\nساعة</string>

    <string name="v_example">V / v</string>
    <string name="v_word">Vogel\nطائر</string>

    <string name="w_example">W / w</string>
    <string name="w_word">Wasser\nماء</string>

    <string name="x_example">X / x</string>
    <string name="x_word">Xylophon\nآلة إيقاع</string>

    <string name="y_example">Y / y</string>
    <string name="y_word">Yacht\nيخت</string>

    <string name="z_example">Z / z</string>
    <string name="z_word">Zebra\nحمار وحشي</string>


    <string name="personal_pronoun">PersonalPronomen</string>
    <string name="personal_pronoun_ar">الضمائر الشخصيه</string>
    <string name="ich">Ich</string>
    <string name="ich_ar">أنا</string>
    <string name="du">Du</string>
    <string name="du_ar">أنتَ/أنتِ\n(للمفرد)</string>
    <string name="er">Er</string>
    <string name="er_ar">هو</string>
    <string name="sie">sie</string>
    <string name="sie_ar">هي</string>
    <string name="es">Es</string>
    <string name="es_ar">هو/هي\n(لغير العاقل+الحيادي)</string>
    <string name="wir">Wir</string>
    <string name="wir_ar">نحن</string>
    <string name="ihr">Ihr</string>
    <string name="ihr_ar">أنتم</string>
    <string name="sie_polite">Sie</string>
    <string name="sie_polite_ar">هم / حضرتك\n(للكل بصيغة الاحترام)</string>
    <string name="dieser">Dieser</string>
    <string name="dieser_ar">هذا\n(مذكر)</string>
    <string name="diese">Diese</string>
    <string name="diese_ar">هذه\n(مؤنث/جمع)</string>
    <string name="dieses">Dieses</string>
    <string name="dieses_ar">هذا\n(محايد)</string>
    <string name="jener">Jener</string>
    <string name="jener_ar">ذلك\n(مذكر)</string>
    <string name="jene">Jene</string>
    <string name="jene_ar">تلك\n(مؤنث / جمع)</string>
    <string name="jenes">Jenes</string>
    <string name="jenes_ar">ذلك\n(محايد)</string>


    <string name="added_to_favorites">تمت الإضافة إلى قائمة المفضلة</string>
    <string name="removed_from_favorites">تمت الإزالة من قائمة المفضلة</string>


    <string name="oppositequalitiesa1">الصفات المعاكسة A1</string>
    <string name="conjunctions">أدوات الربط</string>
    <string name="verbs_a1">افعال A1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>