<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- المجموعة الأولى -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemfav"
            android:state_checked="false"
            android:title="@string/favo"
            android:icon="@drawable/like" />
    </group>



    <!-- مجموعة علم ألمانيا -->
    <group
        android:id="@+id/germanygroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/germany"
            android:icon="@drawable/germanyflag"
            android:title="@string/favo" />

    </group>


    <item android:title="@string/gramatik">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/itema1"
                    android:icon="@drawable/book"
                    android:title="@string/favo" />


                <!-- You can add more here -->
                <!--  يمكنك اضافه المزيد هنا -->

            </group>
        </menu>
    </item>

    <!-- مجموعة الخيارات الإضافية -->
    <group
        android:id="@+id/item08"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itemsharapp"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/aboutapp"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/starts"
            android:icon="@drawable/starts"
            android:title="@string/strats" />
    </group>

</menu>
