<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="?android:colorBackground"
        tools:context=".AppAbout">

        <!-- 🟪 بطاقة العنوان "حول التطبيق" -->
        <androidx.cardview.widget.CardView
            android:id="@+id/aboutTitleCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            app:cardElevation="8dp"
            android:layout_marginTop="15dp"

            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:backgroundTint="#D72C2C">

            <TextView
                android:id="@+id/aboutTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/about"
                android:textColor="@color/favoTextColor"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage,TextSizeCheck" />
        </androidx.cardview.widget.CardView>


        <!-- 🟨 بطاقة اللوجو والعنوان -->
        <androidx.cardview.widget.CardView
            android:id="@+id/logoCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toBottomOf="@+id/aboutTitleCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp">

                <!-- Logo -->
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dloogo"
                    android:contentDescription="@string/progname"
                    android:layout_marginBottom="12dp" />

                <!-- النص الأول -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/designabout"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,TextSizeCheck" />

                <!-- النص الثاني -->
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progname"
                    android:textAlignment="center"
                    android:textColor="@color/favoTextColor"
                    android:background="#D72C2C"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,TextSizeCheck,TextContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- 🟩 بطاقة التواصل -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="?attr/colorSurface"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toBottomOf="@+id/logoCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:id="@+id/tocommunicate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/contactIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/tocommunicate"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chat"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tocommunicate"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- 🟦 بطاقة المشاركة -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="?attr/colorSurface"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toBottomOf="@+id/cardView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:id="@+id/shareLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/shareIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/share"
                    android:contentDescription="@string/sharing" />

                <TextView
                    android:id="@+id/shareText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharing"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- 🟧 بطاقة التقييم -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorSurface"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:id="@+id/rateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/rateIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/evaluate"
                    android:scaleType="fitCenter"
                    android:src="@drawable/star"
                    tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

                <TextView
                    android:id="@+id/rateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evaluate"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- 🩶 النص السفلي -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            tools:ignore="SpUsage,TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
